...
      <Tabs.Screen
        name="strategy"
        options={{ title: 'Strategy', tabBarIcon: icon('trending-up-outline') }}
      />
      <Tabs.Screen
        name="governance"
        options={{ title: 'Governance', tabBarIcon: icon('hammer-outline') }}
      />
    </Tabs>
  );
}

